# cargo-semver-bump

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: main.rs
